# dife

./: .gitignore  CAVEATS.md  HARD_BENCH_PLAN.md  METHODOLOGY.md  PROJECT_FINAL_REPORT.md  README.md  RESULTS.md  RESULTS_REPLICATION.md  RESULTS_SNAPSHOT.md  RESULTS_split_cifar.md  SANITY_CHECKS.md  SUMMARY_SWEEP.md  SUMMARY_SWEEP_MIX.md  demo_integration.py  dife.py  generate_replication_report.py  memory_layer.py  pyproject.toml  requirements.txt  run_ablation_mv_shape.py  run_all.py  run_all_experiments.py  run_audit_post_fix.py  run_beta_bound_rerun.py  run_beta_sensitivity.py  run_bulletproof.py  run_canonical.py  run_cifar_benchmark.py  run_fast_track.py  run_missing.py  run_mnist_benchmark.py  run_money_comparison.py  run_one_job.py  run_parallel_beta.py  run_replication.py  run_sweep_repaired.py  watchdog.sh  watchdog_money.sh  watchdog_r030.sh
benchmark/: baselines.py  data.py  fitting.py  models.py  plotting.py
docs/: CANONICAL_RESULTS.md  CANONICAL_VERDICT.md  HISTORICAL_RESULTS_MAP.md  RED_TEAM_CONCLUSION.md  colossus2_fast_track.md
eval/: buffer.py  config.py  grid_search.py  metrics.py  online_fitters.py  plotting_ext.py  report.py  runner.py  schedulers.py  trainer.py
logs/: demo_integration.csv  done_jobs.txt  remaining_jobs.txt  run_all.sh
memory-vortex-dife-lab/: README.md  requirements.txt
scripts/: analyze_beta_rerun.py  gen_assessment_pdf.py  gen_canonical_results.py  gen_canonical_verdict.py  gen_results_snapshot.py  gen_sweep_summary.py  inspect_controller_trace.py  run_sanity_checks.py
tests/: conftest.py  test_dife.py  (+1 more)
(+406 files in other folders)
