[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dife"
version = "0.1.0"
description = "Decay-Interference Forgetting Equation — closed-form model of catastrophic forgetting with adaptive replay scheduling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Adem Vessell"},
]
keywords = [
    "continual-learning",
    "catastrophic-forgetting",
    "replay-scheduling",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
bench = [
    "torch>=1.10",
    "torchvision>=0.11",
    "matplotlib>=3.5",
]
dev = [
    "pytest>=7.0",
]

[project.urls]
Repository = "https://github.com/AdemVessell/dife"

[tool.setuptools.packages.find]
include = ["dife*", "eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
